--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,9 +13,20 @@
         android:theme="@style/Theme.AndroidJetpackCompose"
         tools:targetApi="31">
         <activity
-            android:name=".HomeActivity"
+            android:name=".TextViewActivity"
             android:exported="true"
-            android:label="@string/title_activity_home"
+            android:label="@string/title_activity_text_view"
+            android:theme="@style/Theme.AndroidJetpackCompose">
+            <intent-filter>
+                <action android:name="android.intent.action.MAIN" />
+
+                <category android:name="android.intent.category.LAUNCHER" />
+            </intent-filter>
+        </activity>
+        <activity
+            android:name=".ButtonActivity"
+            android:exported="true"
+            android:label="@string/title_activity_button"
             android:theme="@style/Theme.AndroidJetpackCompose">
            <!-- <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -24,15 +35,37 @@
             </intent-filter>-->
         </activity>
         <activity
-            android:name=".MainActivity"
+            android:name=".LoginActivity"
+            android:exported="false"
+            android:label="@string/title_activity_login"
+            android:theme="@style/Theme.AndroidJetpackCompose" />
+        <activity
+            android:name=".HomeActivity"
             android:exported="true"
-            android:label="@string/app_name"
+            android:label="@string/title_activity_home"
             android:theme="@style/Theme.AndroidJetpackCompose">
+
+            <!--
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
+            -->
+        </activity>
+        <activity
+            android:name=".MainActivity"
+            android:exported="true"
+            android:label="@string/app_name"
+            android:theme="@style/Theme.AndroidJetpackCompose">
+
+            <!--
+            <intent-filter>
+                <action android:name="android.intent.action.MAIN" />
+
+                <category android:name="android.intent.category.LAUNCHER" />
+            </intent-filter>
+            -->
         </activity>
     </application>
 
